hphp/hack/test/typecheck/test_lambda2.php.exp
File "test_lambda2.php", line 13, characters 3-6:
Pure functions can only call other pure functions. (Typing[4387])
  File "test_lambda2.php", line 9, characters 8-50:
  This function is normal.
